# boost_polinomial_gcd

./: .travis.yml
src/: CMakeLists.txt  main.cpp  poly.h  unit_tests.cpp
